# bridge-aws

./: .flake8  .gitignore  README.md  pyproject.toml  setup.py
s3/: __init__.py  s3.py
s3_connector_lib/: __init__.py  s3connector.py
tests/: conftest.py  test_s3.py  test_s3connector.py
