[project]
name = "s3-connector"
version = "0.0.1"
license = "GPL"
description = "BRIDGE s3 connector, allows managing s3."
readme = "README.md"
repository = "https://github.com/BridgeMarketing/s3-connector"
requires-python = ">=3.9"
author = "BRIDGE"
maintainers = [
  {name = "Patrick Kirchhoff", email = "patrick.kirchhoff@thebridgecorp.com"}
]

[build-system]
requires = ["setuptools", "wheel"]

[tool.isort]
py_version = "39"
profile = "black"
line_length = 88

[tool.black]
line-length = 88
target_version = ["py39"]
exclude = '''
(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.mypy_cache
    | \.tox
    | \.venv
    | venv
    | _build
    | buck-out
    | build
    | dist
    | \.vscode
    | deployment
    | src/tests
    | qa
    | infrastructure
    | etc
    | src/model/migrations
    | s3-connector.egg-info
  )/
)
'''
